--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 *{
     margin: 0;
     padding: 0;
+    cursor:url(./Design_sans_titre__34_-removebg-preview.png),auto;
     box-sizing: border-box;
 }
 body{
@@ -13,6 +14,7 @@ body{
     width: 100%;
     height: 100%;
     flex-direction: column;
+   
 }
 .titre {
     display: flex;
@@ -105,3 +107,6 @@ body{
     text-decoration: none;
     list-style: none;
 }
+
+
+
